# firebase-android-sdk

./: -P  .deepsource.toml  .gitignore  .gitmodules  Android  Android SDK  AndroidEmulatorSetup.txt  AndroidEmulatorSetup.zsh  AuthBehaviors.md  BreakingChangesDataConnectM184.md  CONTRIBUTING.md  Cbv  Dangerfile  Data Sazwanend  DataConnectTODO.md  Database  Fairbase sazwan dev  Jules.md  License Fairbase  Muhamad sazwan bin ismail  Awas semua  Película y mas  Pull request  README.md  agents.md  alternative-root-project.gradle  alternative-settings.gradle  build.gradle  build.gradle.kts  codecov.yml  copyrights.json  cowboy  default-preguard.txt  empty-api.txt  fh.pom  gradle.properties  hello.txt  ignoreCommits.txt  index.html  lint.patch  newfile.txt  (+14 more)
.github/: Google.docs  Html5  config.java
.opensource/: project.json
Java/: CI workflow
aar/: firebase-crashlytics-18.2.5-SNAPSHOT.aar
ai-logic/: ai-logic.gradle.kts
apk-size/: README.md  apk-size.gradle  gradle.properties  settings.gradle
appcheck/: .project  appcheck.gradle  appcheck.gradle.kts
buildSrc/: README.md  build.gradle  build.gradle.kts  devsite_transform.sh  firesite_transform.sh  gms_transform.sh  settings.gradle  settings.gradle.kts
ci/: Cl  Google CLA  README.md  changelog_check.py  run.sh
ci/fireci/: .gitignore  pyproject.toml  setup.cfg  setup.py
ci/fireci/fireci/: __init__.py  ci_utils.py  commands.py  dir_utils.py  emulator.py  gradle.py  internal.py  main.py  plugins.py  prow_utils.py  stats.py  tracing.py  uploader.py
ci/fireci/fireciplugins/: __init__.py  api_information.py  binary_size.py  changelog_comment.py  clean.py  copyright.py  coverage.py  fireperf.py  macrobenchmark.py  startup_time.py
ci/fireci/fireciplugins/macrobenchmark/: commands.py
ci/fireci/fireciplugins/macrobenchmark/analyze/: aggregator.py  analyzer.py  plotter.py  utils.py
ci/fireci/fireciplugins/macrobenchmark/run/: log_decorator.py  runner.py  test_project.py  test_project_builder.py  utils.py
ci/fireci/tests/: __init__.py  artifact_handler_test.py  copyright_test.py  emulator_test.py  fileutil.py  gradle_test.py  integ_tests.py  scripts.py
ci/fireci/workflow_summary/: README.md  collect_ci_test_logs.py  github.py  workflow_information.py
contributor-docs/: README.md  _config.yml  how_firebase_works.md  index.md
direct-boot-test/: build.gradle  settings.gradle
docs/: MSI-2026-07734  README.md  executors.md  make_release_notes.py
encoder-processor/: encoder-processor.gradle
encoder-processor-tests/: encoder-processor-tests.gradle
encoders/: .project  README.md  api.txt  encoders.gradle  encoders.gradle.kts
fiamui-app/: README.md  fiamui-app.gradle  proguard-rules.pro
firebase-abt/: .project  CHANGELOG.md  firebase-abt.gradle  firebase-abt.gradle.kts  gradle.properties
firebase-ai/: CHANGELOG.md  README.md  api.txt  consumer-rules.pro  firebase-ai.gradle.kts  gradle.properties  lint-baseline.xml  update_responses.sh
firebase-ai-ksp-processor/: CHANGELOG.md  README.md  build.gradle.kts  gradle.properties
firebase-ai-ondevice/: CHANGELOG.md  README.md  api.txt  firebase-ai-ondevice.gradle.kts  gradle.properties
firebase-ai-ondevice-interop/: README.md  firebase-ai-ondevice-interop.gradle.kts
firebase-annotations/: .project  CHANGELOG.md  api.txt  firebase-annotations.gradle  firebase-annotations.gradle.kts  gradle.properties
firebase-app-distribution/: .project  api.txt  firebase-app-distribution.gradle  gradle.properties
firebase-app-distribution-stub/: api.txt  firebase-app-distribution-stub.gradle  gradle.properties
firebase-app-rule/: README.md  firebase-app-rule.gradle  lint.xml
firebase-appdistribution/: CHANGELOG.md  api.txt  firebase-appdistribution.gradle  gradle.properties
firebase-appdistribution-api/: CHANGELOG.md  api.txt  firebase-appdistribution-api.gradle  gradle.properties
firebase-appdistribution-gradle/: CHANGELOG.md  README.md  firebase-appdistribution-gradle.gradle  gradle.properties  test-credentials.json
firebase-appdistribution-stub/: api.txt  firebase-appdistribution-stub.gradle
firebase-authexchange/: firebase-authexchange.gradle  firebase-authexchange.gradle.kts
firebase-authexchange-interop/: firebase-authexchange-interop.gradle
firebase-common/: .project  CHANGELOG.md  Firebase  README.md  api.txt  baseline.txt  firebase-common.gradle  firebase-common.gradle.kts  gradle.properties  lint-baseline.xml  mapping.txt  preguard.txt  proguard.txt
firebase-common-ktx/: firebase-common-ktx.gradle  gradle.properties
firebase-components/: .project  CHANGELOG.md  firebase-components.gradle  firebase-components.gradle.kts  gradle.properties  proguard.txt
firebase-config/: .project  CHANGELOG.md  api.txt  firebase-config.gradle  firebase-config.gradle.kts  gradle.properties
firebase-config-core/: api.txt  firebase-config-core.gradle  gradle.properties
firebase-config-interop/: CHANGELOG.md  api.txt  firebase-config-interop.gradle.kts  gradle.properties
firebase-crashlytics/: .project  CHANGELOG.md  README.md  api.txt  firebase-crashlytics.gradle  (+1 more)
firebase-crashlytics-buildtools/: CHANGELOG.md  README.md  firebase-crashlytics-buildtools.gradle  gradle.properties
firebase-crashlytics-gradle/: CHANGELOG.md  README.md  firebase-crashlytics-gradle.gradle.kts  gradle.properties
firebase-crashlytics-ndk/: .project  CHANGELOG.md  README.md  firebase-crashlytics-ndk-proguard.txt  firebase-crashlytics-ndk.gradle  gradle.properties  proguard.txt
firebase-dataconnect/ci/: README.md  build.gradle.kts  calculate_github_issue_for_commenting.py  calculate_github_issue_for_commenting_test.py  fill_ci_defaults.sh  firebase-tools-version.txt  gradle.properties  logcat_error_report.py  logcat_error_report_test.py  notify_issue.py  notify_issue_test.py  post_comment_for_job_results.py  pyproject.toml  requirements.txt  settings.gradle.kts  util.py
(+8842 files in other folders)
