[build-system]
requires = ["setuptools ~= 82.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fireci"
version = "0.1"
dependencies = [
  "protobuf==5.29.6",
  "click==8.1.7",
  "google-cloud-storage==2.18.2",
  "mypy==1.17.1",
  "numpy==2.4.2",
  "pandas==2.3.3",
  "PyGithub==1.58.2",
  "pystache==0.6.0",
  "requests==2.32.4",
  "seaborn==0.12.2",
  "PyYAML==6.0.1",
  "termcolor==2.4.0",
  "pytest"
]

[project.scripts]
fireci = "fireci.main:cli"

[tool.setuptools]
packages = ["fireci", "fireciplugins"]

[tool.mypy]
strict_optional = false

[[tool.mypy.overrides]]
  module = [
    "google.cloud",
    "matplotlib",
    "matplotlib.pyplot",
    "pandas",
    "pystache",
    "requests",
    "seaborn",
    "yaml"
  ]
  ignore_missing_imports = true
