[metadata]
name = fireci
version = 0.1

[options]
install_requires =
        protobuf==3.19
        click==8.1.3
        google-cloud-storage==2.5.0
        numpy==1.23.1
        pandas==1.5.1
        PyGithub==1.55
        pystache==0.6.0
        requests==2.23.0
        seaborn==0.12.1
        PyYAML==6.0.0

[options.extras_require]
test =
    pytest

[options.entry_points]
console_scripts =
    fireci = fireci.main:cli
