[metadata]
name = fireci
version = 0.1

[options]
install_requires =
    protobuf==3.20.3
    click==8.1.7
    google-cloud-storage==2.18.2
    mypy==1.6.0
    numpy==1.24.4
    pandas==1.5.3
    PyGithub==1.58.2
    pystache==0.6.0
    requests==2.31.0
    seaborn==0.12.2
    PyYAML==6.0.1
    termcolor==2.4.0

[options.extras_require]
test =
    pytest

[options.entry_points]
console_scripts =
    fireci = fireci.main:cli

[mypy]
strict_optional = False
[mypy-google.cloud]
ignore_missing_imports = True
[mypy-matplotlib]
ignore_missing_imports = True
[mypy-matplotlib.pyplot]
ignore_missing_imports = True
[mypy-pandas]
ignore_missing_imports = True
[mypy-pystache]
ignore_missing_imports = True
[mypy-requests]
ignore_missing_imports = True
[mypy-seaborn]
ignore_missing_imports = True
[mypy-yaml]
ignore_missing_imports = True
